--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "./src/main.rs"
+crate-type = ["staticlib"]
+
 [profile.dev]
 panic = "abort"
 
