--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-path = "./src/main.rs"
+path = "./src/lib.rs"
 crate-type = ["staticlib"]
 
 [profile.dev]
