--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,11 @@ edition = "2021"
 [lib]
 path = "./src/lib.rs"
 crate-type = ["staticlib"]
+
+[dependencies]
+volatile = "0.2.6"
+spin = "0.5.2"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
